Added open api code generation and refactor the code
